app/springboot/1_micro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro
  labels:
    app: micro
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: micro
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: micro
      labels:
        app: micro
    spec:
      containers:
      - image: abcxlab/micro:latest
        name: micro 
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: 200Mi
            cpu: 400m
          limits:
            cpu: 800m
            memory: 400Mi     
        readinessProbe:
          periodSeconds: 1
          httpGet:
            path: /
            port: 8080
