app/springboot/2_micro-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: micro
