app/springboot/2_micro-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: micro
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro
spec:
  rules:
  - host: micro.k8s.abcxlab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: micro
          servicePort: 80
